--- a/sprite-editor/layout.css
+++ b/sprite-editor/layout.css
@@ -1,6 +1,5 @@
 :root {
   --tool-button-size: 54px;
-  --other-canvas-size: calc((100vh - var(--header-height) - var(--gap)) / 4 - var(--gap));
   --header-height: 60px;
   --gap: 2px;
 }
@@ -31,7 +30,7 @@ main {
   grid-column: 2 / 3;
 }
 
-#other-canvases-section {
+#colateral-section {
   grid-row: 2 / 4;
   grid-column: 3 / 4;
 }
@@ -67,25 +66,6 @@ main {
 .swatch-list {
   padding-left: 0;
   list-style-type: none;
-}
-
-#other-canvases-section {
-  padding-left: calc(8 * var(--gap));
-}
-
-.other-canvas-container {
-  width: var(--other-canvas-size);
-  height: var(--other-canvas-size);
-  box-sizing: border-box;
-}
-
-.other-canvas-container {
-  margin: var(--gap) 0;
-}
-
-.other-canvas {
-  width: 100%;
-  height: 100%;
 }
 
 #mouse-stats {
